--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Group 3</a>.
+    Coded by <a href="#">Group 3 beka and nahom</a>.
+    
   </div>
 </body>
 </html>
