--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 
   
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <title>group 3 asssignment</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
