--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 
   
-  <title>beka</title>
+  <title>grade 12 b group 3 coders</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -23,19 +23,25 @@
 <body>
   <div class="car-container">
     <div class="car-item" id="sedan">
+      <img src="C:\Users\Negussie\Desktop\new folder\CoderG12\images\icon-sedans.svg" alt="Sedan Icon">
   <h1>Sedans</h1>
   <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.</p>
+  <button>Learn More</button>
     </div>
     <div class="car-item" id="SUV">
+      <img src="C:\Users\Negussie\Desktop\new folder\CoderG12\images\icon-suvs.svg" alt="SUV Icon">
   <h1>SUVs</h1>
   <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
   and off-road adventures.</p>
+  <button>Learn More</button>
 </div>
 <div class="car-item" id="Luxury">
+  <img src="C:\Users\Negussie\Desktop\new folder\CoderG12\images\icon-luxury.svg" alt="Luxury Icon">
   <h1>Luxury</h1>
   <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
   rental and arrive in style.</p>
+  <button>Learn More</button>
 </div>
   </div>
   <div class="attribution">
