Fix a small mistakes in the code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 
   
-  <title>grade 12 b group 3 coders</title>
+  <title>grade 12 B group 3 coders</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
